tests/instantiating/static_without_default/stderr.golden
error: 's' static functionality must have init-value property set
bus.fbd +2:3
   |
 2 |   s static
   |   ^
